--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
   </head>
   <body>
     <header class="hidden">
