--- a/src/template.html
+++ b/src/template.html
@@ -15,40 +15,57 @@
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
   </head>
   <body>
-    <header class="hidden">
-      <a href="./index.html" class="logo">
+    <header class="popupMobile">
+      <div class="logo">
         <span>
-          <h2>Fjordsmaken</h2>
+          <h2 onclick="loadPages('home')">Fjordsmaken</h2>
+            <div onclick="togglePopup()" class="hamburgerMenu">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            </div>
+            <script>
+            function togglePopup() {
+              const popup = document.querySelector('.popupMobile');
+              if (popup) {
+              popup.classList.toggle('active');
+
+              const buttonClicks = document.querySelectorAll('.left_nav button');
+              buttonClicks.forEach((button) => {
+                button.addEventListener('click', () => {
+                  popup.classList.remove('active');
+                });
+              });
+              }
+            }
+            </script>
         </span>
-      </a>
+      </div>
       <nav>
         <div class="left_nav">
-          <button>Menu</button>
-          <button>Reservation</button>
-          <button>About</button>
-          <button>Contact us</button>
+          <button onclick="loadPages('home');">Home</button>
+          <button onclick="loadPages('menu');">Menu</button>
+          <button onclick="loadPages('about');">About</button>
+          <button onclick="loadPages('contact');">Contact us</button>
         </div>
 
         <div class="right_nav">
-          <div class="languages">
-            <button>En</button><span>/</span><button>No</button>
-          </div>
-          <a href="tel:+31628672650">+31 6 286 726 50</a>
+          <p>Book a table:</p><a href="tel:+31628672650">+31 6 286 726 50</a>
         </div>
       </nav>
     </header>
 
-    <section id="jumboHeader" class="container"></section>
-
-    <section id="menuSection"></section>
+    <main>
+      
+    </main>
 
     <footer>
       <div class="container">
-        <a href="./index.html" class="logo_footer">
+        <button onclick="loadPages('home')" class="logo_footer">
           <span>
             <h2>Fjordsmaken</h2>
           </span>
-        </a>
+        </button>
 
         <div class="inner_footer">
           <div>
